2004-05-29  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	Updated with recent libraries.

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Added the possibility to sort icons (via the main or 
	popup menus).

2004-05-27  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	Incremented Ruby/Amazon version (0.8.1 -> 0.8.2).
	
	* data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/preferences_dialog.rb:

	Implemented the preferences backend for the preferences
	dialog box.

2004-05-26  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/icons/book.png:

	Added.

	* lib/alexandria/book.rb:

	Added Book::DEFAULT_RATING.

	* lib/alexandria/ui/icons.rb:

	Added .small_cover and .medium_cover functions.

	* lib/alexandria/ui/info_book_dialog.rb:

	Follow book.rb changes and refresh the book views if the 
	properties has changed.

	* lib/alexandria/ui/main_app.rb:

	- Rating is shown in the tree view ;
	- Fixed several sorting bugs in the tree view ;
	- Now saves the size of the main window properly ;
	- book.png is displayed when the provided cover image is blank ;
	- Refactored some parts of the code.

2004-05-25  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/info_book_dialog.glade,
	  data/alexandria/icons/star_nok.png,
	  data/alexandria/icons/star_ok.png,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui/info_book_dialog.rb:

	Added rating support.

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	User is not able to enter ISBN which contains "-" character(s).

	* TODO:

	Updated (added rating support).

2004-05-24  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/preferences_dialog.glade:

	Fixed the wording (called -> queried), thanks to Dafydd.

	* TODO:

	Added.

2004-05-21  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:
