@@ -1,3 +1,10 @@
+2004-06-04  Dafydd Harries  <daf@muse.19inch.net>
+
+	* lib/alexandria/ui/main_app.rb:
+
+	Fix a bug where Alexandria would crash when GConf keys hadn't been
+	set. Laurent did all the hard work, I just helped with the debugging.
+
 2004-05-29  Laurent Sansonetti  <lrz@gnome.org>
 
 	* README:
